# odsa-ai-backend

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: embedding_space_viz.ipynb  session_0_1_setup.ipynb  session_1_1.ipynb  session_1_2.ipynb  session_2_1.ipynb  session_2_2.ipynb  session_3_1.ipynb  session_3_2.ipynb  session_4_1.ipynb
notebooks/1_1/: session_0_1_setup.ipynb  session_1_1.ipynb
notebooks/1_2/: field_ab_test.ipynb  session_1_2.ipynb
notebooks/2_1/: embedding_comparison.ipynb  embedding_fails.ipynb  how_models_think.ipynb  session_2_1.ipynb
notebooks/2_2/: chunking_explorer.ipynb  session_2_2.ipynb
notebooks/3_1/: session_3_1.ipynb
notebooks/3_2/: embedding_space_viz.ipynb  pca_transformer.pkl  session_3_2.ipynb  session_3_2_instructor.ipynb
notebooks/4_1/: session_4_1.ipynb  test_queries.json
notebooks/labs/: lab_1.ipynb  lab_2.ipynb
src/: __init__.py
src/s0_generation/: generate.py
src/s1_extraction/: extractor.py  schemas.py
src/s2_embeddings/: embed.py
src/s3_ingestion/: chunker.py  store.py
src/s4_retrieval/: filtered.py  naive.py
src/s5_observability/: logger.py
