[project]
name = "odsa-ai-cert"
version = "0.1.0"
description = "ODSA AI Certificate Program"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "numpy>=2.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=8.0.0",
]
